--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ web_scrapping/chromedriver-win64/*
 __pycache__/*
 streamlit_app.egg-info/*
 storage/*
-**/__pycache__/
+streamlit_app/__pycache__/*
+streamlit_app/**/__pycache__/*
 /.streamlit/secrets.toml
