--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/*
 streamlit_app.egg-info/*
 storage/*
 streamlit_app/__pycache__/*
+streamlit_app/app/__pycache__/*
 streamlit_app/**/__pycache__/*
 /.streamlit/secrets.toml
 **/__pycache__/*
