--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ streamlit_app/app/__pycache__/*
 streamlit_app/**/__pycache__/*
 /.streamlit/secrets.toml
 **/__pycache__/*
-streamlit_app/db/vector_db/*
+streamlit_app/models/*
