--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ streamlit_app/**/__pycache__/*
 /.streamlit/secrets.toml
 **/__pycache__/*
 streamlit_app/models/*
+streamlit_app/logs/*
+web_scrapping/logs/*
+web_scrapping.egg-info/*
+web_scrapping/downloaded_files/*
+streamlit_app/db/vector_db/*
