feat: Handle Logging

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ web_scrapping/logs/*
 web_scrapping.egg-info/*
 web_scrapping/downloaded_files/*
 streamlit_app/db/vector_db/*
+streamlit_app/db/vector_db/index.faiss
+streamlit_app/db/vector_db/index.pkl
