feat: Completion task about: structure folder, navigate page, collect and push into s3

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ streamlit_app/db/vector_db/**/*
 streamlit_app/db/vector_db/index.faiss
 streamlit_app/db/vector_db/index.pkl
 streamlit_app/db/vector_db/models--sentence-transformers--all-MiniLM-L6-v2/*
+web_scrapping/utils/logs/*
