--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@ web_scrapping/downloaded_files/*
 streamlit_app/db/vector_db/**/*
 streamlit_app/db/vector_db/index.faiss
 streamlit_app/db/vector_db/index.pkl
+streamlit_app/db/bm25.pkl
 streamlit_app/db/vector_db/models--sentence-transformers--all-MiniLM-L6-v2/*
 web_scrapping/utils/logs/*
