feat: enhancing AI performance

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,11 @@
 load_dotenv
-selenium
-bs4
-chromedriver_binary
-pandas
-pymysql
-cryptography
 streamlit
 langchain-groq
 pymongo
 toml
 tiktoken
 langchain-core 
-langgraph>0.2.27
-langchain-groq
 langchain-huggingface
-faiss-cpu
-boto3
-rank_bm25
+langchain-chroma>=0.1.0
+chromadb>=0.4.18
+pymysql
