--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 load_dotenv
+selenium
+bs4
+chromedriver_binary
+pandas
+pymysql
+cryptography
 streamlit
-langchain
 langchain-groq
 pymongo
 toml
 tiktoken
 langchain-core 
+langgraph>0.2.27
+langchain-groq
 langchain-huggingface
-langchain-chroma>=0.1.0
-chromadb>=0.4.18
-pymysql
-pysqlite3-binary>=0.4.7
-sqlite3 >= 3.35.0
+faiss-cpu
+boto3
+rank_bm25
